// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extractData() extracts benchmark output from cargo - cargo_output.txt 1`] = `
[
  {
    "api": undefined,
    "category": "bench_fib_10",
    "keySize": NaN,
    "name": undefined,
    "os": "ubuntu-latest",
    "platform": undefined,
    "range": "± 24",
    "unit": "ns/iter",
    "value": 135,
  },
  {
    "api": undefined,
    "category": "bench_fib_20",
    "keySize": NaN,
    "name": undefined,
    "os": "ubuntu-latest",
    "platform": undefined,
    "range": "± 755",
    "unit": "ns/iter",
    "value": 18149,
  },
]
`;

exports[`extractData() extracts benchmark output from cargo - cargo_output_units.txt 1`] = `
[
  {
    "api": undefined,
    "category": "cmov",
    "keySize": NaN,
    "name": undefined,
    "os": "ubuntu-latest",
    "platform": undefined,
    "range": "± 14",
    "unit": "cycles/iter",
    "value": 2835,
  },
  {
    "api": undefined,
    "category": "cmov2",
    "keySize": NaN,
    "name": undefined,
    "os": "ubuntu-latest",
    "platform": undefined,
    "range": "± 19",
    "unit": "cycles/iter",
    "value": 2845,
  },
  {
    "api": undefined,
    "category": "mov",
    "keySize": NaN,
    "name": undefined,
    "os": "ubuntu-latest",
    "platform": undefined,
    "range": "± 17",
    "unit": "cycles/iter",
    "value": 1508,
  },
  {
    "api": undefined,
    "category": "upload",
    "keySize": NaN,
    "name": undefined,
    "os": "ubuntu-latest",
    "platform": undefined,
    "range": "± 420",
    "unit": "MS/s",
    "value": 1911,
  },
  {
    "api": undefined,
    "category": "download",
    "keySize": NaN,
    "name": undefined,
    "os": "ubuntu-latest",
    "platform": undefined,
    "range": "± 69",
    "unit": "MS/s",
    "value": 9001,
  },
]
`;

exports[`extractData() extracts benchmark output from cargo - cargo_output2.txt 1`] = `
[
  {
    "api": undefined,
    "category": "bench_engine_new",
    "keySize": NaN,
    "name": undefined,
    "os": "ubuntu-latest",
    "platform": undefined,
    "range": "± 70126",
    "unit": "ns/iter",
    "value": 211834,
  },
  {
    "api": undefined,
    "category": "bench_engine_new_raw",
    "keySize": NaN,
    "name": undefined,
    "os": "ubuntu-latest",
    "platform": undefined,
    "range": "± 18",
    "unit": "ns/iter",
    "value": 197,
  },
  {
    "api": undefined,
    "category": "bench_engine_new_raw_core",
    "keySize": NaN,
    "name": undefined,
    "os": "ubuntu-latest",
    "platform": undefined,
    "range": "± 31",
    "unit": "ns/iter",
    "value": 196,
  },
  {
    "api": undefined,
    "category": "bench_engine_register_fn",
    "keySize": NaN,
    "name": undefined,
    "os": "ubuntu-latest",
    "platform": undefined,
    "range": "± 82",
    "unit": "ns/iter",
    "value": 493,
  },
]
`;

exports[`extractData() extracts benchmark output from cargo - cargo_output3.txt 1`] = `
[
  {
    "api": undefined,
    "category": "bench_fib_10",
    "keySize": NaN,
    "name": undefined,
    "os": "ubuntu-latest",
    "platform": undefined,
    "range": "± 2.21",
    "unit": "ns/iter",
    "value": 148.7,
  },
  {
    "api": undefined,
    "category": "bench_fib_20",
    "keySize": NaN,
    "name": undefined,
    "os": "ubuntu-latest",
    "platform": undefined,
    "range": "± 440.25",
    "unit": "ns/iter",
    "value": 18794.12,
  },
]
`;

exports[`extractData() extracts benchmark output from cargo - criterion_output.txt 1`] = `
[
  {
    "api": undefined,
    "category": "Create Realm",
    "keySize": NaN,
    "name": undefined,
    "os": "ubuntu-latest",
    "platform": undefined,
    "range": "± 4",
    "unit": "ns/iter",
    "value": 329,
  },
  {
    "api": undefined,
    "category": "Symbols (Execution)",
    "keySize": NaN,
    "name": undefined,
    "os": "ubuntu-latest",
    "platform": undefined,
    "range": "± 47",
    "unit": "ns/iter",
    "value": 3268,
  },
  {
    "api": undefined,
    "category": "For loop (Execution)",
    "keySize": NaN,
    "name": undefined,
    "os": "ubuntu-latest",
    "platform": undefined,
    "range": "± 123",
    "unit": "ns/iter",
    "value": 12314,
  },
  {
    "api": undefined,
    "category": "Fibonacci (Execution)",
    "keySize": NaN,
    "name": undefined,
    "os": "ubuntu-latest",
    "platform": undefined,
    "range": "± 10166",
    "unit": "ns/iter",
    "value": 1672496,
  },
]
`;

exports[`extractData() extracts benchmark output from cargo - criterion_output_with_metadata_format.txt 1`] = `
[
  {
    "api": "",
    "category": "ML-KEM",
    "keySize": 512,
    "name": "PK Validation",
    "os": "ubuntu-latest",
    "platform": "",
    "range": "± 4",
    "unit": "ns/iter",
    "value": 329,
  },
  {
    "api": "unpacked (Execution)",
    "category": "ML-KEM",
    "keySize": 512,
    "name": "PK Validation",
    "os": "ubuntu-latest",
    "platform": "neon",
    "range": "± 47",
    "unit": "ns/iter",
    "value": 3268,
  },
  {
    "api": "unpacked (Execution)",
    "category": "ML-KEM",
    "keySize": 768,
    "name": "PK Validation",
    "os": "ubuntu-latest",
    "platform": "neon",
    "range": "± 123",
    "unit": "ns/iter",
    "value": 12314,
  },
  {
    "api": "unpacked (external random) (Execution)",
    "category": "ML-KEM",
    "keySize": 512,
    "name": "PK Validation",
    "os": "ubuntu-latest",
    "platform": "neon",
    "range": "± 10166",
    "unit": "ns/iter",
    "value": 1672496,
  },
]
`;

exports[`localWriteBenchmark() extracts benchmark output from cargo - cargo_output.txt 1`] = `
[
  {
    "api": undefined,
    "category": "bench_fib_10",
    "keySize": NaN,
    "name": undefined,
    "os": "ubuntu-latest",
    "platform": undefined,
    "range": "± 24",
    "unit": "ns/iter",
    "value": 135,
  },
  {
    "api": undefined,
    "category": "bench_fib_20",
    "keySize": NaN,
    "name": undefined,
    "os": "ubuntu-latest",
    "platform": undefined,
    "range": "± 755",
    "unit": "ns/iter",
    "value": 18149,
  },
]
`;

exports[`localWriteBenchmark() extracts benchmark output from cargo - cargo_output_units.txt 1`] = `
[
  {
    "api": undefined,
    "category": "cmov",
    "keySize": NaN,
    "name": undefined,
    "os": "ubuntu-latest",
    "platform": undefined,
    "range": "± 14",
    "unit": "cycles/iter",
    "value": 2835,
  },
  {
    "api": undefined,
    "category": "cmov2",
    "keySize": NaN,
    "name": undefined,
    "os": "ubuntu-latest",
    "platform": undefined,
    "range": "± 19",
    "unit": "cycles/iter",
    "value": 2845,
  },
  {
    "api": undefined,
    "category": "mov",
    "keySize": NaN,
    "name": undefined,
    "os": "ubuntu-latest",
    "platform": undefined,
    "range": "± 17",
    "unit": "cycles/iter",
    "value": 1508,
  },
  {
    "api": undefined,
    "category": "upload",
    "keySize": NaN,
    "name": undefined,
    "os": "ubuntu-latest",
    "platform": undefined,
    "range": "± 420",
    "unit": "MS/s",
    "value": 1911,
  },
  {
    "api": undefined,
    "category": "download",
    "keySize": NaN,
    "name": undefined,
    "os": "ubuntu-latest",
    "platform": undefined,
    "range": "± 69",
    "unit": "MS/s",
    "value": 9001,
  },
]
`;

exports[`localWriteBenchmark() extracts benchmark output from cargo - cargo_output2.txt 1`] = `
[
  {
    "api": undefined,
    "category": "bench_engine_new",
    "keySize": NaN,
    "name": undefined,
    "os": "ubuntu-latest",
    "platform": undefined,
    "range": "± 70126",
    "unit": "ns/iter",
    "value": 211834,
  },
  {
    "api": undefined,
    "category": "bench_engine_new_raw",
    "keySize": NaN,
    "name": undefined,
    "os": "ubuntu-latest",
    "platform": undefined,
    "range": "± 18",
    "unit": "ns/iter",
    "value": 197,
  },
  {
    "api": undefined,
    "category": "bench_engine_new_raw_core",
    "keySize": NaN,
    "name": undefined,
    "os": "ubuntu-latest",
    "platform": undefined,
    "range": "± 31",
    "unit": "ns/iter",
    "value": 196,
  },
  {
    "api": undefined,
    "category": "bench_engine_register_fn",
    "keySize": NaN,
    "name": undefined,
    "os": "ubuntu-latest",
    "platform": undefined,
    "range": "± 82",
    "unit": "ns/iter",
    "value": 493,
  },
]
`;

exports[`localWriteBenchmark() extracts benchmark output from cargo - cargo_output3.txt 1`] = `
[
  {
    "api": undefined,
    "category": "bench_fib_10",
    "keySize": NaN,
    "name": undefined,
    "os": "ubuntu-latest",
    "platform": undefined,
    "range": "± 2.21",
    "unit": "ns/iter",
    "value": 148.7,
  },
  {
    "api": undefined,
    "category": "bench_fib_20",
    "keySize": NaN,
    "name": undefined,
    "os": "ubuntu-latest",
    "platform": undefined,
    "range": "± 440.25",
    "unit": "ns/iter",
    "value": 18794.12,
  },
]
`;

exports[`localWriteBenchmark() extracts benchmark output from cargo - criterion_output.txt 1`] = `
[
  {
    "api": undefined,
    "category": "Create Realm",
    "keySize": NaN,
    "name": undefined,
    "os": "ubuntu-latest",
    "platform": undefined,
    "range": "± 4",
    "unit": "ns/iter",
    "value": 329,
  },
  {
    "api": undefined,
    "category": "Symbols (Execution)",
    "keySize": NaN,
    "name": undefined,
    "os": "ubuntu-latest",
    "platform": undefined,
    "range": "± 47",
    "unit": "ns/iter",
    "value": 3268,
  },
  {
    "api": undefined,
    "category": "For loop (Execution)",
    "keySize": NaN,
    "name": undefined,
    "os": "ubuntu-latest",
    "platform": undefined,
    "range": "± 123",
    "unit": "ns/iter",
    "value": 12314,
  },
  {
    "api": undefined,
    "category": "Fibonacci (Execution)",
    "keySize": NaN,
    "name": undefined,
    "os": "ubuntu-latest",
    "platform": undefined,
    "range": "± 10166",
    "unit": "ns/iter",
    "value": 1672496,
  },
]
`;
